--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "build:prod": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "start:dev": "webpack serve --config webpack.dev.js",
     "start:prod": "webpack serve --config webpack.prod.js",
-    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/balancer.ts",
-    "start:multi": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/balancer.ts --multi"
+    "start:dev": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +18,6 @@
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
-    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "uuid": "^10.0.0",
