--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "build": "webpack",
     "start:prod": "webpack && node dist/bundle.cjs",
-    "start:dev": "node --loader ts-node/esm src/index.ts"
+    "start:dev": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
+    "test": "cross-env MODE=test jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/node": "^22.7.6",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
